Ostalo je jos samo home page da se sredi i da se testira aplikacija na greske

--- a/angular-src/src/app/components/business-settings/business-settings.component.css
+++ b/angular-src/src/app/components/business-settings/business-settings.component.css
@@ -43,9 +43,8 @@
 	opacity: 1;
 }
 
-.modal-body hr{
-	border-top: 1px solid #001029;
-	opacity: 0.5;
+.modal-body{
+	overflow: auto;
 }
 
 .form-control{
@@ -54,7 +53,7 @@
 }
 
 .dropdown-menu{
-	max-height: 280px;
+	max-height: 180px;
     min-width: stretch;
     text-align: center;
     overflow: auto;
