--- a/angular-src/src/app/components/login/login.component.css
+++ b/angular-src/src/app/components/login/login.component.css
@@ -12,7 +12,8 @@
 
 #loginbox{  
     background: white;
-    margin-top: 15%;
+    margin-top: 5%;
+    margin-bottom: 5%;
     padding: 0;   
     box-shadow: 0 8px 50px -2px #000;    
 }
