--- a/angular-src/src/app/components/business-settings/business-settings.component.css
+++ b/angular-src/src/app/components/business-settings/business-settings.component.css
@@ -44,7 +44,7 @@
 }
 
 .modal-body{
-	overflow: auto;
+	padding: 15px 30px;
 }
 
 .form-control{
@@ -53,7 +53,7 @@
 }
 
 .dropdown-menu{
-	max-height: 180px;
+	max-height: 280px;
     min-width: stretch;
     text-align: center;
     overflow: auto;
