--- a/angular-src/src/app/components/business-settings/business-settings.component.html
+++ b/angular-src/src/app/components/business-settings/business-settings.component.html
@@ -47,32 +47,30 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Add New Item</h4>
       </div>
-      <div class="modal-body">
-        <div class="col-md-12">
-          <form (keyup.enter)="addNewItem(modAddName.value, modAddLength.value, modAddCost.value)" >
-            <div class="form-group">
-              <label for="modal-name">Name: </label>
-              <input #modAddName type="text" class="form-control" id="modal-ItemName" placeholder="Name">
-              <label *ngIf="errorName" for="modal-name" style="color: red; float: right; font-size: 10px;">
-              Please fill in the name
-              </label>
-            </div>
-            <div class="form-group">
-              <label for="modal-length">Length: </label>
-              <input #modAddLength type="text" class="form-control" id="modal-ItemLength" placeholder="0">
-              <label *ngIf="errorLength" for="modal-length" style="color: red; float: right; font-size: 10px;">
-              Please fill in the length
-              </label>
-            </div>
-            <div class="form-group">
-              <label for="modal-cost">Cost: </label>
-              <input #modAddCost type="text" class="form-control" id="modal-ItemCost" placeholder="0">
-              <label *ngIf="errorCost" for="modal-cost" style="color: red; float: right; font-size: 10px;">
-              Please fill in the cost
-              </label>
-            </div>
-          </form>
-        </div>
+      <div class="modal-body col-md-12">
+        <form (keyup.enter)="addNewItem(modAddName.value, modAddLength.value, modAddCost.value)" >
+          <div class="form-group">
+            <label for="modal-name">Name: </label>
+            <input #modAddName type="text" class="form-control" id="modal-ItemName" placeholder="Name">
+            <label *ngIf="errorName" for="modal-name" style="color: red; float: right; font-size: 10px;">
+            Please fill in the name
+            </label>
+          </div>
+          <div class="form-group">
+            <label for="modal-length">Length: </label>
+            <input #modAddLength type="text" class="form-control" id="modal-ItemLength" placeholder="0">
+            <label *ngIf="errorLength" for="modal-length" style="color: red; float: right; font-size: 10px;">
+            Please fill in the length
+            </label>
+          </div>
+          <div class="form-group">
+            <label for="modal-cost">Cost: </label>
+            <input #modAddCost type="text" class="form-control" id="modal-ItemCost" placeholder="0">
+            <label *ngIf="errorCost" for="modal-cost" style="color: red; float: right; font-size: 10px;">
+            Please fill in the cost
+            </label>
+          </div>
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -90,23 +88,21 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Edit Item</h4>
       </div>
-      <div class="modal-body">
-        <div class="col-md-12">
-          <form (keyup.enter)="updateItem(modEditName.value, modEditLength.value, modEditCost.value)" >
-            <div class="form-group">
-              <label for="modal-name">Name: </label>
-              <input #modEditName type="text" class="form-control" id="modal-ItemName" value={{itemName}} placeholder="Name">
-            </div>
-            <div class="form-group">
-              <label for="modal-length">Length: </label>
-              <input #modEditLength type="text" class="form-control" id="modal-ItemLength" value={{itemLength}} placeholder="0">
-            </div>
-            <div class="form-group">
-              <label for="modal-cost">Cost: </label>
-              <input #modEditCost type="text" class="form-control" id="modal-ItemCost" value={{itemCost}} placeholder="0">
-            </div>
-          </form>
-        </div>
+      <div class="modal-body col-md-12">
+        <form (keyup.enter)="updateItem(modEditName.value, modEditLength.value, modEditCost.value)" >
+          <div class="form-group">
+            <label for="modal-name">Name: </label>
+            <input #modEditName type="text" class="form-control" id="modal-ItemName" value={{itemName}} placeholder="Name">
+          </div>
+          <div class="form-group">
+            <label for="modal-length">Length: </label>
+            <input #modEditLength type="text" class="form-control" id="modal-ItemLength" value={{itemLength}} placeholder="0">
+          </div>
+          <div class="form-group">
+            <label for="modal-cost">Cost: </label>
+            <input #modEditCost type="text" class="form-control" id="modal-ItemCost" value={{itemCost}} placeholder="0">
+          </div>
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
