--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -14,72 +14,12 @@
 	padding: 0;
 }
 
-#myCarousel {
-	margin-top: 10px;
-	z-index: 1;
-}
-
-.img-responsive {
-	opacity: 0;
-}
-
-.carousel-indicators li{
-	border: 2px solid #FFF;
-	border-radius: 0;
-	background-color: #00caf6;
-
-}
-
-/* container sadrzaja vrteske */
-.carousel-caption {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	bottom: 0;
-	top: 0;
-	right: 0;
-	left: 0;
-	padding-left: 6%;
-	padding-right: 6%;
-	padding-top: 7%;
-	padding-bottom: 8%;
-}
-
-/* slika unutar vrteske */
-.carouselPic {
-	border: 1px solid #FFF;
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-
-.carouselPic img {
-	width: 100%;
-    height: 100%;
-}
-
-/* tekst unutar vrteske */
-.carouselText {
-	border: 1px solid #FFF;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background-color: #00caf6;
-	text-align: center;
-	overflow: hidden;
-}
-
-/*kontrole*/
-.carousel-control.left,
-.carousel-control.right {
-    background-image: none;
-}
-
-.carousel-control {
-	z-index: 20;
-	color: #03001a;
-	width: 5%;
+.panel{
+	background-color: rgba(0,0,0,0.5);
+    color: white;
+	margin-top: 5%;
+	margin-bottom: 5%;
+	padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 40px;
 }
