--- a/angular-src/src/app/components/members/members.component.css
+++ b/angular-src/src/app/components/members/members.component.css
@@ -32,7 +32,7 @@
 }
 
 .modal-body{
-	overflow: auto;
+	padding: 15px 30px;
 }
 
 .modal-body hr{
@@ -50,7 +50,7 @@
 }
 
 .dropdown-menu{
-	max-height: 180px;
+	max-height: 280px;
     min-width: stretch;
     text-align: center;
     overflow: auto;
