--- a/angular-src/src/app/components/members/members.component.html
+++ b/angular-src/src/app/components/members/members.component.html
@@ -49,61 +49,59 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Add New Member</h4>
       </div>
-      <div class="modal-body">
-        <div class="col-md-12">
-          <form (keyup.enter)="addNewMember(modName.value, modPhone.value, modMail.value, modStart.value, modAmount.value)" >
-            <div class="form-group">
-              <label for="modal-name">Name: </label>
-              <input #modName type="text" class="form-control" id="modal-name" placeholder="Name">
-              <label *ngIf="errorName" for="modal-name" style="color: red; float: right; font-size: 10px;">
-              Please fill in the name
+      <div class="modal-body col-md-12">
+        <form (keyup.enter)="addNewMember(modName.value, modPhone.value, modMail.value, modStart.value, modAmount.value)" >
+          <div class="form-group">
+            <label for="modal-name">Name: </label>
+            <input #modName type="text" class="form-control" id="modal-name" placeholder="Name">
+            <label *ngIf="errorName" for="modal-name" style="color: red; float: right; font-size: 10px;">
+            Please fill in the name
+            </label>
+          </div>
+          <div class="form-group">
+            <label for="modal-phone">Phone: </label>
+            <input #modPhone type="text" class="form-control" id="modal-phone" placeholder="Phone">
+          </div>
+          <div class="form-group">
+            <label for="modal-mail">E-mail: </label>
+            <input #modMail type="text" class="form-control" id="modal-mail" placeholder="E-mail">
+          </div>
+          <hr>
+          <div class="form-group">
+            <label for="modal-type">Type: </label>
+            <div class="dropdown">
+              <button id="modal-type" type="button" class="form-control" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{membershipType}}
+                <span class="caret"></span>
+              </button>
+              <label *ngIf="errorType" for="modal-type" style="color: red; float: right; font-size: 10px;">
+              Please select membership type
               </label>
+              <ul class="dropdown-menu" aria-labelledby="modal-type">
+                <li *ngFor = "let membership of membershipTypes">
+                  <a (click)="membershipSelected(membership._id, membership.name, membership.cost)">
+                  {{membership.name}}
+                  </a>
+                </li>
+              </ul>
             </div>
-            <div class="form-group">
-              <label for="modal-phone">Phone: </label>
-              <input #modPhone type="text" class="form-control" id="modal-phone" placeholder="Phone">
-            </div>
-            <div class="form-group">
-              <label for="modal-mail">E-mail: </label>
-              <input #modMail type="text" class="form-control" id="modal-mail" placeholder="E-mail">
-            </div>
-            <hr>
-            <div class="form-group">
-              <label for="modal-type">Type: </label>
-              <div class="dropdown">
-                <button id="modal-type" type="button" class="form-control" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  {{membershipType}}
-                  <span class="caret"></span>
-                </button>
-                <label *ngIf="errorType" for="modal-type" style="color: red; float: right; font-size: 10px;">
-                Please select membership type
-                </label>
-                <ul class="dropdown-menu" aria-labelledby="modal-type">
-                  <li *ngFor = "let membership of membershipTypes">
-                    <a (click)="membershipSelected(membership._id, membership.name, membership.cost)">
-                    {{membership.name}}
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="modal-start">Start: </label>
-              <input #modStart type="date" class="form-control" id="modal-start">
-              <label *ngIf="errorDate" for="modal-start" style="color: red; float: right; font-size: 10px;">
-              Please select the date
-              </label>
-            </div>
-            <div class="form-group">
-              <label for="modal-cost">Cost: </label>
-              <input type="text" class="form-control" id="modal-cost" value="{{membershipCost}}" disabled="">
-            </div>
-            <div class="form-group">
-              <label for="modal-amount">Amount Paid: </label>
-              <input #modAmount type="text" class="form-control" id="modal-amount" placeholder="0">
-            </div>
-          </form>
-        </div>
+          </div>
+          <div class="form-group">
+            <label for="modal-start">Start: </label>
+            <input #modStart type="date" class="form-control" id="modal-start">
+            <label *ngIf="errorDate" for="modal-start" style="color: red; float: right; font-size: 10px;">
+            Please select the date
+            </label>
+          </div>
+          <div class="form-group">
+            <label for="modal-cost">Cost: </label>
+            <input type="text" class="form-control" id="modal-cost" value="{{membershipCost}}" disabled="">
+          </div>
+          <div class="form-group">
+            <label for="modal-amount">Amount Paid: </label>
+            <input #modAmount type="text" class="form-control" id="modal-amount" placeholder="0">
+          </div>
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
