--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -2,6 +2,7 @@
 	<app-navbar></app-navbar>
 	<app-header></app-header>
 	<div id="content-wrapper">
+		<flash-messages class="flash-msg"></flash-messages>
 		<router-outlet></router-outlet>
 	</div>
 </div>
