--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
           MANAGE THEM WITH EASE
         </h1>
         <h5>
-           With your gym you can track every membership and payment<br>
+           With yourGYM you can track every membership and payment<br>
            just click on member`s name to access their profile
         </h5>
         <div style="display: inline-flex; margin-top: 20px;">
