--- a/angular-src/src/app/components/business-settings/business-settings.component.html
+++ b/angular-src/src/app/components/business-settings/business-settings.component.html
@@ -23,7 +23,7 @@
           </thead>
           <tbody>
             <tr *ngFor = "let item of items">
-              <td><a>{{item.name}}</a></td>
+              <td>{{item.name}}</td>
               <td>{{item.length}}</td>
               <td>{{item.cost}}</td>
               <td>
@@ -31,7 +31,11 @@
                   <span class="glyphicon glyphicon-pencil"></span>
                 </a>
               </td>
-              <td><a (click)="deleteItem(item._id)"><span class="glyphicon glyphicon-trash"></span></a></td>
+              <td>
+                <a (click)="deleteItem(item._id)">
+                  <span class="glyphicon glyphicon-trash"></span>
+                </a>
+              </td>
             </tr>
           </tbody>
         </table>
@@ -86,7 +90,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Edit Item</h4>
+        <h4 class="modal-title"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Item</h4>
       </div>
       <div class="modal-body col-md-12">
         <form (keyup.enter)="updateItem(modEditName.value, modEditLength.value, modEditCost.value)" >
