--- a/angular-src/src/app/components/login/login.component.css
+++ b/angular-src/src/app/components/login/login.component.css
@@ -45,3 +45,13 @@
 .glyphicon {
     font-size: 50px
 }
+
+.error-label{
+    width: 100%;
+    padding: 10px 15px;
+    border: 1px solid;
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    border-radius: 4px;
+}
