--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
            just click on member`s name to access their profile
         </h5>
         <div style="display: inline-flex; margin-top: 20px;">
-          <button [routerLink]="['/register']" type="button" class="btn btn-primary" style="padding: 15px 40px; font-size: 14px;">
+          <button [routerLink]="['/register']" type="button" class="btn btn-info" style="padding: 15px 40px; font-size: 14px;">
           GET STARTED
           </button>
           <label style="align-items: center; display:flex; font-weight: lighter; font-size: 11px; margin-left: 10px;">
