--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -15,7 +15,8 @@
 }
 
 .panel{
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0,0,0,0);
+    border: none;
     color: white;
 	margin-top: 5%;
 	margin-bottom: 5%;
